task 4 : take 6